fix exercise number spacing in eoc exercises

--- a/styles/output/microbiology-pdf.css
+++ b/styles/output/microbiology-pdf.css
@@ -1862,6 +1862,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -1908,6 +1910,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -1956,6 +1960,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2002,6 +2008,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2050,6 +2058,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2096,6 +2106,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2144,6 +2156,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2190,6 +2204,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2238,6 +2254,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2284,6 +2302,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2332,6 +2352,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
@@ -2378,6 +2400,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   text-decoration: none;
   color: #000000;
   font-weight: bold;
+  width: 2%;
+  text-align: right;
   min-width: 24px;
 }
 
